feat: first locations code