@@ -1,19 +1,22 @@
 package com.upc.pre.peaceapp.location.interfaces.rest;
 
-import com.upc.pre.peaceapp.location.application.internal.commandservices.LocationCommandService;
-import com.upc.pre.peaceapp.location.application.internal.queryservices.LocationQueryService;
-import com.upc.pre.peaceapp.location.domain.model.commands.DeleteLocationCommand;
+import com.upc.pre.peaceapp.location.domain.model.queries.GetAllLocationsQuery;
+import com.upc.pre.peaceapp.location.domain.model.queries.GetDangerousLocationsQuery;
+import com.upc.pre.peaceapp.location.domain.services.LocationCommandService;
+import com.upc.pre.peaceapp.location.domain.services.LocationQueryService;
 import com.upc.pre.peaceapp.location.interfaces.rest.resources.CreateLocationResource;
-import com.upc.pre.peaceapp.location.interfaces.rest.resources.UpdateLocationResource;
 import com.upc.pre.peaceapp.location.interfaces.rest.transform.CreateLocationCommandFromResourceAssembler;
 import com.upc.pre.peaceapp.location.interfaces.rest.transform.LocationResourceFromEntityAssembler;
-import com.upc.pre.peaceapp.location.interfaces.rest.transform.UpdateLocationCommandFromResourceAssembler;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("/api/v1/locations")
+@Tag(name = "Locations", description = "Operations related to Location Management")
 public class LocationController {
 
     private final LocationCommandService commands;
@@ -24,38 +27,37 @@ public class LocationController {
         this.queries = queries;
     }
 
+    // Crear una ubicación asociada a un reporte
     @PostMapping
     public ResponseEntity<?> create(@RequestBody CreateLocationResource body) {
-        var id = commands.handle(CreateLocationCommandFromResourceAssembler.toCommand(body));
-        return ResponseEntity.status(HttpStatus.CREATED)
-                .body(queries.getById(id).map(LocationResourceFromEntityAssembler::toResource));
+        var location = commands.handle(CreateLocationCommandFromResourceAssembler.toCommand(body));
+
+        return location
+                .<ResponseEntity<?>>map(loc -> ResponseEntity
+                        .status(HttpStatus.CREATED)
+                        .body(LocationResourceFromEntityAssembler.toResource(loc)))
+                .orElseGet(() -> ResponseEntity
+                        .status(HttpStatus.BAD_REQUEST)
+                        .body("{\"message\": \"Location could not be created\"}"));
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<?> update(@PathVariable Long id, @RequestBody UpdateLocationResource body) {
-        commands.handle(UpdateLocationCommandFromResourceAssembler.toCommand(id, body));
-        return ResponseEntity.ok(queries.getById(id).map(LocationResourceFromEntityAssembler::toResource));
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<?> getById(@PathVariable Long id) {
-        return queries.getById(id)
-                .<ResponseEntity<?>>map(l -> ResponseEntity.ok(LocationResourceFromEntityAssembler.toResource(l)))
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body("{\"message\":\"Location not found\"}"));
-    }
-
+    // Obtener todas las ubicaciones
     @GetMapping
-    public ResponseEntity<?> getAll(@RequestParam(value = "district", required = false) String district) {
-        var list = (district == null || district.isBlank())
-                ? queries.getAll()
-                : queries.getByDistrict(district);
-        return ResponseEntity.ok(list.stream().map(LocationResourceFromEntityAssembler::toResource).toList());
+    public ResponseEntity<?> getAll() {
+        var list = queries.handle(new GetAllLocationsQuery());
+        var resources = list.stream()
+                .map(LocationResourceFromEntityAssembler::toResource)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(resources);
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<?> delete(@PathVariable Long id) {
-        commands.handle(new DeleteLocationCommand(id));
-        return ResponseEntity.ok().build();
+    // Obtener ubicaciones peligrosas
+    @GetMapping("/dangerous")
+    public ResponseEntity<?> getDangerousLocations(@RequestParam(defaultValue = "5") int quantityReports) {
+        var list = queries.handle(new GetDangerousLocationsQuery(quantityReports));
+        var resources = list.stream()
+                .map(LocationResourceFromEntityAssembler::toResource)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(resources);
     }
 }
